[package]
name = "cidr-tool"
version = "0.1.0"
edition = "2021"
authors = ["tommcamm <tomm.camm@protonmail.ch>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipnet = "2.5.0"
csv = "1.1.6"
clap = { version = "3.1.12", features = ["derive", "unicode", "cargo"] }
mysql = "*"